--- a/src/app/components/shared/footer/footer.component.html
+++ b/src/app/components/shared/footer/footer.component.html
@@ -6,7 +6,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8">
-            <h2>Be in the know with the latest update from <span>Dancerio</span></h2>
+            <h2>Be in the know with the latest update from <span>SNM</span></h2>
           </div>
           <div class="col-lg-4">
             <form action="#">
@@ -22,7 +22,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 col-12 about-widget">
             <a href="index.html" class="logo"><img style="height: 50px;" src='../../../../assets/images/logo/logo1.svg' alt=""></a>
-            <p>Join Dancers Around The World Learning On Dancerio, Start Improving your dance skills today. </p>
+            <p>Join Dancers Around The World Learning On SNM, Start Improving your dance skills today. </p>
             <ul>
               <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
@@ -46,20 +46,19 @@
           <div class="col-lg-2 col-sm-6 col-12 footer-list">
             <h5 class="title">Navigate</h5>
             <ul>
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Customer</a></li>
-              <li><a href="#">Member Forum</a></li>
-              <li><a href="#">Collection</a></li>
-              <li><a href="#">Events Calendar</a></li>
+              <li><a (click)="navigate('home')">Home</a></li>
+              <li><a (click)="navigate('founder')">Founder</a></li>
+              <li><a (click)="navigate('faculty')">Faculty</a></li>
+              <li><a (click)="navigate('contact')">Contact</a></li>
+              <li><a (click)="navigate('portfolio')">Portfolio</a></li>
             </ul>
           </div>
           <div class="col-xl-3 col-lg-2 col-sm-6 col-12 footer-information">
             <h5 class="title">Contact Info</h5>
             <ul>
-              <li><i class="fa fa-map-marker" aria-hidden="true"></i> 201 Stokes Isle Apt. 896, New York 10010, United
-                State</li>
-              <li><i class="fa fa-phone" aria-hidden="true"></i> (+880)1 616481</li>
-              <li><i class="fa fa-envelope" aria-hidden="true"></i> info@yourdomain.com</li>
+              <li><i class="fa fa-map-marker" aria-hidden="true"></i>Shop no 1, Somdatta Society, Sector 15, Sanpada Rd, Navi Mumbai 400705</li>
+              <li><i class="fa fa-phone" aria-hidden="true"></i>+91 9892956110</li>
+              <li><i class="fa fa-envelope" aria-hidden="true"></i>shraddhabhide16@gmail.com</li>
             </ul>
           </div>
         </div>
