--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -45,8 +45,8 @@
                 <!-- <a routerLink="/about-us" class="dropdown-item">About Us</a> -->
                 <!-- <a routerLink="/syllabus" class="dropdown-item">Syllabus</a> -->
                 <a routerLink="/our-class" class="dropdown-item">Our Class</a>
-                <a routerLink="/portfolio" class="dropdown-item">Protfolio</a>
-                <a routerLink="/faq" class="dropdown-item">Faq</a>
+                <a routerLink="/portfolio" class="dropdown-item">Portfolio</a>
+                <!-- <a routerLink="/faq" class="dropdown-item">Faq</a> -->
               </div>
             </div>
           </li>
