--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -78,13 +78,13 @@
                   <div class="single-counter-box">
                     <h2 class="number"><span class="timer" data-from="0" data-to="1300" data-speed="1200"
                         data-refresh-interval="5">0</span>+</h2>
-                    <p>Verified Happy Client</p>
+                    <p>Verified Happy Students</p>
                   </div> <!-- /.single-counter-box -->
                 </div>
                 <div class="col-sm-6">
                   <div class="single-counter-box">
                     <h2 class="number"><span class="timer" data-from="0" data-to="150" data-speed="1200"
-                        data-refresh-interval="5">0</span>+</h2>
+                        data-refresh-interval="5">50</span>+</h2>
                     <p>Time Award Winner</p>
                   </div> <!-- /.single-counter-box -->
                 </div>
