--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -1,12 +1,13 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner">
-    <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape">
+     <img style="width: 100%;height: 50rem;" src="../../../assets/images/Nrityavilay/RAJ_5811.JPG" alt="" class="bg-shape"> 
+    <!-- <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape">
     <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
-    <img src="../../../assets/images/shape/16.png" alt="" class="shape-three">
+    <img src="../../../assets/images/shape/16.png" alt="" class="shape-three"> -->
     <div class="container">
-      <h2 class="title">Our Events</h2>
+      <h2 class="title text-white">Our Events</h2>
     </div> <!-- /.container -->
   </div>
 
@@ -19,11 +20,11 @@
               <div class="text-wrapper">
                 <img src="../../../assets/images/shape/25.png" alt="" class="shape-one">
                 <div class="theme-title-one">
-                  <h2 class="main-title">Classical Odissi Friday performance </h2>
+                  <h2 class="main-title">Guru Purnima</h2>
                 </div>
                 <p>Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
                   auctor.</p>
-                <div class="date">/ 25 September 2018</div>
+                <div class="date">/ 23 July 2021</div>
                 <a href="#" class="button-one">View More</a>
                 <!-- New Added -->
                 <div id="count" class="clearfix row">
@@ -50,7 +51,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6 order-lg-first"><img src="../../../assets/images/shape/22.png" alt=""
+            <div class="col-lg-6 order-lg-first"><img style="height: 667px;width: 441px;" src="../../../assets/images/Nrutyanaad/DSC_8357.jpg" alt=""
                 class="event-img"></div>
           </div>
         </div>
@@ -58,20 +59,20 @@
     </div>
   </div>
 
-  <div class="section-spacing our-event">
-    <div class="container">
-      <div class="theme-title-one text-center">
+  <div class="section-spacing our-event ">
+    <div class="container" style="text-align: center;">
+      <div class="theme-title-one">
         <h2 class="main-title">Our Most of The Popular <br>Events</h2>
       </div>
       <div class="main-wrapper">
         <img src="../../../assets/images/shape/23.png" alt="" class="shape">
         <div class="table-responsive event-table">
-          <table class="table">
+          <table class="table text-center">
             <tr>
               <td class="date">21 September 2018 </td>
               <td class="time">Sunday at 4:00 pm - 8:30 pm</td>
-              <td class="title">Renowned Dance Masters</td>
-              <td class="check-button"><a href="#">Check Event</a></td>
+              <td class="title">Krishnarang</td>
+              <td class="check-button"><a>Check Event</a></td>
             </tr>
           </table>
         </div>
@@ -80,8 +81,8 @@
             <tr>
               <td class="date">21 September 2018 </td>
               <td class="time">Sunday at 4:00 pm - 8:30 pm</td>
-              <td class="title">DFW for graduate earnings vs cost</td>
-              <td class="check-button"><a href="#">Check Event</a></td>
+              <td class="title">Mauritius</td>
+              <td class="check-button"><a>Check Event</a></td>
             </tr>
           </table>
         </div>
@@ -90,8 +91,8 @@
             <tr>
               <td class="date">23 September 2018 </td>
               <td class="time">Sunday at 4:00 pm - 8:30 pm</td>
-              <td class="title">Texas Woman’s is a public university </td>
-              <td class="check-button"><a href="#">Check Event</a></td>
+              <td class="title">Shirdi</td>
+              <td class="check-button"><a>Check Event</a></td>
             </tr>
           </table>
         </div>
@@ -100,31 +101,11 @@
             <tr>
               <td class="date">17 September 2018 </td>
               <td class="time">Sunday at 4:00 pm - 8:30 pm</td>
-              <td class="title">Woman’s is a public university </td>
-              <td class="check-button"><a href="#">Check Event</a></td>
+              <td class="title">Spain</td>
+              <td class="check-button"><a>Check Event</a></td>
             </tr>
           </table>
-        </div>
-        <div class="table-responsive event-table">
-          <table class="table">
-            <tr>
-              <td class="date">26 September 2018 </td>
-              <td class="time">Sunday at 4:00 pm - 8:30 pm</td>
-              <td class="title">Dancewoods Festival</td>
-              <td class="check-button"><a href="#">Check Event</a></td>
-            </tr>
-          </table>
-        </div>
-        <div class="table-responsive event-table">
-          <table class="table">
-            <tr>
-              <td class="date">21 September 2018 </td>
-              <td class="time">Sunday at 4:00 pm - 8:30 pm</td>
-              <td class="title">Texas Woman’s is a public university </td>
-              <td class="check-button"><a href="#">Check Event</a></td>
-            </tr>
-          </table>
-        </div>
+        </div>      
       </div>
     </div>
   </div>
@@ -153,5 +134,6 @@
       </div>
     </div>
   </div>
+  <app-whatsapp></app-whatsapp>
   <app-scrollToTop></app-scrollToTop>
 </div>
