--- a/src/app/pages/faculty/faculty.component.html
+++ b/src/app/pages/faculty/faculty.component.html
@@ -1,9 +1,9 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner" style="background-size: cover;">
-    <img style="width: 100%;height: 50rem;" src="../../../assets/images/\Nrutyanaad/DSC_8945.jpg" alt="" class="bg-shape">
+    <img style="width: 100%;height: 50rem;" src="../../../assets/images/Krishnamahima sanpada/ER4A0537.JPG" alt="" class="bg-shape">
     <div class="container">
-      <h2 class="title">Faculty</h2>
+      <h2 class="title text-white">Faculty</h2>
     </div>
   </div>
 
@@ -44,7 +44,7 @@
               <div class="item">
                 <div class="single-team-member">
                   <div class="img-box" (click)="scroll(item2)">
-                    <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/Amruta Joshi.jpg" alt="">
+                    <img style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;" src="../../../assets/images/SNM faculties/InShot_20210614_144427554.jpg" alt="">
                     <ul>
                       <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                       <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
@@ -108,7 +108,7 @@
       <div class="row card p-5" style="flex-direction: row;">
         <div class="col-xl-6 col-lg-6 col-sm-12">
           <div class="item">
-            <span>
+            <span class="h5">
               {{bioDesc.faculty1Desc}}
             </span>
           </div>
@@ -142,7 +142,7 @@
       <div class="row card p-5" style="flex-direction: row;">
         <div class="col-xl-6 col-lg-6 col-sm-12">
           <div class="item">
-            <span>
+            <span class="h5">
               {{bioDesc.faculty2Desc}}
             </span>
           </div>
@@ -175,7 +175,7 @@
       <div class="row card p-5" style="flex-direction: row;">
         <div class="col-xl-6 col-lg-6 col-sm-12">
           <div class="item">
-            <span>
+            <span class="h5">
               {{bioDesc.faculty3Desc}}
             </span>
           </div>
@@ -208,7 +208,7 @@
       <div class="row card p-5" style="flex-direction: row;">
         <div class="col-xl-6 col-lg-6 col-sm-12">
           <div class="item">
-            <span>
+            <span class="h5">
               {{bioDesc.faculty4Desc}}
             </span>
           </div>
@@ -235,5 +235,6 @@
       </div>
     </div>
   </div>
+  <app-whatsapp></app-whatsapp>
   <app-scrollToTop></app-scrollToTop>
 </div>
