--- a/src/app/pages/founder/founder.component.html
+++ b/src/app/pages/founder/founder.component.html
@@ -1,30 +1,30 @@
 <div class="main-page-wrapper">
-  
+
 
   <div class="theme-inner-banner" style="background-size: cover;">
     <img style="width: 100%;" src="../../../assets/images/Shraddha_Bhide/DSC_8375.jpg" alt="" class="bg-shape">
     <div class="container">
-      <h2 class="title">Founder</h2>
+      <h2 class="title text-white">Founder</h2>
     </div>
   </div>
 
-  <div class="section-spacing section-spacing-bottom">
+  <div class="section-spacing section-spacing-bottom" style="background:grey;">
     <div class="portfolio-section">
-      <div class="container bg-dark text-white">
-        <h1 class="text-center pt-5">Founder</h1>
+      <div class="container bg-dark text-white rounded">
+        <!-- <h1 class="pt-5 pl-5 text-white">Founder</h1> -->
         <div class="row">
           <div class="col-xl-12 col-lg-12 col-sm-12">
             <article class="m-5">
-              <p class="text-center"><strong>Nrityalankar Mrs. Shraddha Bhide</strong></p><br>
+              <h2 class="text-white">Nrityalankar Mrs. Shraddha Bhide</h2><br>
 
-              <p> An Outstanding Patron of Kathak Art Form
+              <p class="">An Outstanding Patron of Kathak Art Form
                 Nrityalankar Mrs. Shraddha Bhide started her incredible journey of the Kathak art form at the tender age
                 of 8 years under the able guidance and mentorship of Guru Sangeetacharya Mrs. Vaishali Dudhe. She has
                 been
                 a consistent and dedicated learner over the years. Her commitment to the art form is a benchmark for the
                 fellow students.</p><br>
 
-              <ul>Her accreditations in Kathak are:
+              <ul class="pl-3">Her accreditations in Kathak are:
                 <li type="circle">
                   <strong>Alankar (M.A) in Kathak dance</strong>from Akhil Bhartiya Gandharva Mahavidyalaya (Dec, 2008)
                 </li>
@@ -43,7 +43,7 @@
                 in Management Studies (HR Specialisation) and a Bachelors in Science (Chemistry Specialisation).
               </p> <br>
 
-              <p class="text-center font-weight-bold">
+              <p class="font-weight-bold">
                 “No person was ever honoured for what he received.
                 Honour has been the reward for what he gave”
               </p>
@@ -60,7 +60,7 @@
               In her untiring pursuit of achieving excellence in the art form, she has choreographed many famous dance
               programmes like:
 
-              <ul>
+              <ul class="pl-3">
                 <li type="circle">
                   “Nrityavilaya – A Kathak Fusion” - A unique experiment of converging diverse Dance forms like Korean,
                   Belly, Sufi, Contemporary, Tap Dance with Kathak.
@@ -104,5 +104,6 @@
     </div>
   </div>
 
+  <app-whatsapp></app-whatsapp>
   <app-scrollToTop></app-scrollToTop>
 </div>
