--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,8 +13,8 @@
               dedicated learner over the years. Her commitment to the art form is a benchmark
               for the fellow students.</p>
 
-            <a href="#" class="read-more wow fadeInLeft animated" data-wow-delay="0.8s">Read More
-              <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a>
+            <!-- <a href="#" class="read-more wow fadeInLeft animated" data-wow-delay="0.8s">Read More
+              <span><i class="fa fa-arrow-right" aria-hidden="true"></i></span></a> -->
 
           </div>
         </div>
@@ -51,7 +51,7 @@
           </div> -->
     </div>
 
-    <div class="section-spacing our-feature-one">     
+    <!-- <div class="section-spacing our-feature-one">     
       <img src="../../../assets/images/shape/1.png" alt="" class="shape">
       <div class="container">
         <div class="row">
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="section-spacing about-us">
       <img src="../../../assets/images/shape/3.png" alt="" class="shape-two">
@@ -89,7 +89,7 @@
               <div class="dot" data-aos="fade-up" data-aos-delay="350"></div>
               <div class="dot" data-aos="fade-up" data-aos-delay="550"></div>
               <div class="dot" data-aos="fade-up" data-aos-delay="750"></div>
-              <img src="../../../assets/images/home/1.jpg" alt="">
+              <img style="width: 657px;" src="../../../assets/images/murti/RAJ_5483.JPG" alt="">
             </div>
           </div>
         </div>
@@ -97,12 +97,10 @@
         <div class="inner-container right-content">
           <div class="wrapper">
             <div class="theme-title-one">
-              <h6 class="upper-title">Katthak Dance Form</h6>
-              <h2 class="main-title">Join A Global Dance Community</h2>
+              <h6 class="upper-title">Natraj Murti</h6>
+              <!-- <h2 class="main-title">Join A Global Dance Community</h2> -->
             </div>
-            <p>Lorem Ipsum proin gravida nibivel velit auctor aenean velitsol licitu Lorem Ipsum proin
-              gravida nibivel velit auctor aenean velitsol licitu Lorem Ipsum proin gravida nibivel velit
-              auctor aenean velitsol licitu</p>
+            <p class="h5">Nataraja (Sanskrit: नटराज, romanized: Naṭarāja), is a depiction of the Hindu god Shiva as the divine cosmic dancer. His dance is called Tandavam or Nadanta, depending on the context of the dance.The pose and artwork is described in many Hindu texts such as the Anshumadbhed agama and Uttarakamika agama, the dance relief or idol featured in all major Hindu temples of Shaivism.</p>
           </div>
         </div>
       </div>
@@ -116,8 +114,8 @@
               <h2 class="main-title">Last year we proved that we’re the best Dance Services </h2>
             </div>
             <div class="col-lg-6">
-              <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt
-                ut labore et dolore magna aliqua.</p>
+              <!-- <p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt
+                ut labore et dolore magna aliqua.</p> -->
             </div>
           </div>
           <div class="row">
@@ -127,28 +125,28 @@
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="20" data-speed="1200"
-                          data-refresh-interval="5">0</span>+</h2>
+                          data-refresh-interval="5">4</span>+</h2>
                       <p>Certified Trainer</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="1300" data-speed="1200"
-                          data-refresh-interval="5">0</span>+</h2>
-                      <p>Verified Happy Client</p>
+                          data-refresh-interval="5">1000</span>+</h2>
+                      <p>Verified Happy Students</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="150" data-speed="1200"
-                          data-refresh-interval="5">0</span>+</h2>
+                          data-refresh-interval="5">100</span>+</h2>
                       <p>Time Award Winner</p>
                     </div>
                   </div>
                   <div class="col-sm-6">
                     <div class="single-counter-box">
                       <h2 class="number"><span class="timer" data-from="0" data-to="280" data-speed="1200"
-                          data-refresh-interval="5">0</span>+</h2>
+                          data-refresh-interval="5">10</span>+</h2>
                       <p>Features added</p>
                     </div>
                   </div>
@@ -185,7 +183,7 @@
       <div class="client-section">
         <div class="theme-title-one text-center">
           <h6 class="upper-title">Testimonials</h6>
-          <h2 class="main-title">What Our Customers <br>Are Saying!!</h2>
+          <h2 class="main-title">What Our Students <br>Are Saying!!</h2>
         </div>
         <div class="wrapper">
           <div class="client-slider">
@@ -194,9 +192,9 @@
                 <div class="item">
                   <div class="text-wrapper">
                     <p>{{bioDesc.faculty1shortDesc}}</p>
-                    <img src="../../../assets/images/home/3.jpg" alt="">
-                    <h6>{{bioDesc.firstFaculty}}</h6>
-                    <span>{{bioDesc.profession}}</span>
+                    <!-- <img src="../../../assets/images/home/3.jpg" alt=""> -->
+                    <h6>Nrityavisharad Shraddha Phdatare</h6>
+                    <span>Student</span>
                   </div>
                 </div>
               </div>
@@ -204,9 +202,9 @@
                 <div class="item">
                   <div class="text-wrapper">
                     <p>{{bioDesc.faculty2shortDesc}}</p>
-                    <img src="../../../assets/images/home/3.jpg" alt="">
-                    <h6>{{bioDesc.secondFaculty}}</h6>
-                    <span>{{bioDesc.profession}}</span>
+                    <!-- <img src="../../../assets/images/home/3.jpg" alt=""> -->
+                    <h6>Trupti Tol</h6>
+                    <span>Student</span>
                   </div>
                 </div>
               </div>
@@ -214,9 +212,9 @@
                 <div class="item">
                   <div class="text-wrapper">
                     <p>{{bioDesc.faculty3shortDesc}}</p>
-                    <img src="../../../assets/images/home/3.jpg" alt="">
-                    <h6>{{bioDesc.thirdFaculty}}</h6>
-                    <span>{{bioDesc.profession}}</span>
+                    <!-- <img src="../../../assets/images/home/3.jpg" alt=""> -->
+                    <h6>Rupali Baraskar</h6>
+                    <span>Student</span>
                   </div>
                 </div>
               </div>
@@ -267,7 +265,7 @@
                     <div class="img-box" (click)="scrollTo('item2')">
                       <img
                         style="width:370px;height: 400px;border-radius: 5px;background-position: center;background-size: cover;"
-                        src="../../../assets/images/SNM faculties/Amruta Joshi.jpg" alt="">
+                        src="../../../assets/images/SNM faculties/InShot_20210614_144427554.jpg" alt="">
                       <ul>
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
