--- a/src/app/pages/our-class/our-class.component.html
+++ b/src/app/pages/our-class/our-class.component.html
@@ -1,135 +1,65 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner">
-    <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape">
-    <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
+    <img style="width: 100%;height: 50rem;" src="../../../assets/images/Krishnamahima sanpada/ER4A0331.JPG" alt="" class="bg-shape"> 
+    <!-- <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
-    <img src="../../../assets/images/shape/16.png" alt="" class="shape-three">
+    <img src="../../../assets/images/shape/16.png" alt="" class="shape-three"> -->
     <div class="container">
-      <h2 class="title">Our Class</h2>
+      <h2 class="title text-white">Our Class</h2>
     </div> 
   </div> 
 
   <div class="section-spacing our-classes">
     <div class="main-container">
       <div class="row">
-        <div class="col-xl-3 col-lg-4 col-sm-6">
+        <div class="col-xl-4 col-lg-4 col-sm-4">
           <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/1.jpg" alt=""></div>
+            <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_173729.jpg" alt=""></div>
             <div class="text">
               <ul class="clearfix">
                 <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
+                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
-              <h6><a href="class-details.html">Senior Performing Arts Classes I & II</a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
+              <h6><a href="class-details.html">Dombivli Class</a></h6>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 10 years.</p>
+              <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
             </div>
           </div> 
         </div> 
-        <div class="col-xl-3 col-lg-4 col-sm-6">
+        <div class="col-xl-4 col-lg-4 col-sm-4">
           <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/2.jpg" alt=""></div>
+            <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_204848.jpg" alt=""></div>
             <div class="text">
               <ul class="clearfix">
                 <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
+                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
-              <h6><a href="class-details.html">Arts Classes I & II</a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
+              <h6><a href="class-details.html">Sanpada Class</a></h6>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 10 years. </p>
+              <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
             </div>
           </div> 
-        </div> 
-        <div class="col-xl-3 col-lg-4 col-sm-6">
+        </div>  
+        <div class="col-xl-4 col-lg-4 col-sm-4">
           <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/3.jpg" alt=""></div>
+            <div class="img-box"><img src="../../../assets/images/SNM Tihai workshop/20180908_205125.jpg" alt=""></div>
             <div class="text">
               <ul class="clearfix">
                 <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
+                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4 pm - 9 pm </li>
               </ul>
-              <h6><a href="class-details.html">Contemporary/Lyrical</a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
+              <h6><a href="class-details.html">Koperkhairne Class</a></h6>
+              <p>Classes are designed for girls aged 6 years and above. All our mentors are highly qualified and are teaching since last 10 years. </p>
+              <!-- <a href="class-details.html" class="theme-button-two">Explore more <span></span></a> -->
             </div>
           </div> 
-        </div> 
-        <div class="col-xl-3 col-lg-4 col-sm-6">
-          <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/4.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
-              </ul>
-              <h6><a href="class-details.html">Senior Performing </a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
-            </div>
-          </div> 
-        </div>
-        <div class="col-xl-3 col-lg-4 col-sm-6">
-          <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/5.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
-              </ul>
-              <h6><a href="class-details.html">Contemporary/Lyrical</a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
-            </div>
-          </div> 
-        </div> 
-        <div class="col-xl-3 col-lg-4 col-sm-6">
-          <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/6.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
-              </ul>
-              <h6><a href="class-details.html">Senior Performing </a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
-            </div>
-          </div>
-        </div> 
-        <div class="col-xl-3 col-lg-4 col-sm-6">
-          <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/7.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
-              </ul>
-              <h6><a href="class-details.html">Arts Classes I & II</a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
-            </div>
-          </div> 
-        </div> 
-        <div class="col-xl-3 col-lg-4 col-sm-6">
-          <div class="single-block">
-            <div class="img-box"><img src="../../../assets/images/class/8.jpg" alt=""></div>
-            <div class="text">
-              <ul class="clearfix">
-                <li><i class="fa fa-calendar" aria-hidden="true"></i> October 20, 2018</li>
-                <li><i class="fa fa-clock-o" aria-hidden="true"></i> 4:30 pm -7:30Pm </li>
-              </ul>
-              <h6><a href="class-details.html">Hip-hop dance refers to street dance</a></h6>
-              <p>Classes are designed for senior high school students. Our most advanced dancers strive to reach </p>
-              <a href="class-details.html" class="theme-button-two">Explore more <span></span></a>
-            </div>
-          </div> 
-        </div> 
+        </div>            
       </div> 
     </div> 
   </div> 
 
-  <div class="section-spacing">
+  <div class="section-spacing mb-5">
     <div class="who-can-attend">
       <div class="container">
         <div class="row">
@@ -141,8 +71,10 @@
           </div>
           <div class="col-lg-7">
             <div class="text">
-              <p>Our mission is to INSPIRE each individual and instill an appreciation and love for the beautiful art of DANCE as well as the joy of PERFORMANCE. Voted ‘Best of Clark County 2016’ and CONVENIENTLY located in Salmon Creek, </p>
-              <p>Dance Fusion SPECIALIZES in Ballet, Tap, Jazz, Contemporary, Hip Hop, Lyrical, Theater, Acro and Fitness for ages 3 to ageless!</p>
+              <p>Our mission is to inspire each individual and instill an appreaciation and love for the beautiful art of DANCE as well as the joy of performance.
+
+                Siddhi Nrityakala Mandir specialises in KATHAK which is an ancient classical dance form. SNM mentors not only prepare students technically to excel the prestigious Akhil Bhartiya Gandharva Mahavidyala examinations but also prepare them for various competitions and programs. </p>
+              <!-- <p>Dance Fusion SPECIALIZES in Ballet, Tap, Jazz, Contemporary, Hip Hop, Lyrical, Theater, Acro and Fitness for ages 3 to ageless!</p> -->
             </div>
           </div>
         </div>
@@ -150,7 +82,7 @@
     </div> 
   </div>
 
-  <div class="section-spacing section-spacing-bottom our-feature-one">
+  <!-- <div class="section-spacing section-spacing-bottom our-feature-one">
     <img src="../../../assets/images/shape/1.png" alt="" class="shape">
     <div class="container">
       <div class="row">
@@ -173,7 +105,8 @@
         </div>
       </div> 
     </div> 
-  </div> 
+  </div>  -->
+  <app-whatsapp></app-whatsapp>
   <app-scrollToTop></app-scrollToTop>
   
 
