--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,10 +1,10 @@
 <div class="main-page-wrapper">
 
   <div class="theme-inner-banner">
-    <img src="../../../assets/images/shape/13.png" alt="" class="bg-shape">
-    <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
+    <img height="885px" width="3840px" src="../../../assets/images/Nrutyanaad/DSC_8567.jpg" alt="" class="bg-shape">
+    <!-- <img src="../../../assets/images/shape/14.png" alt="" class="shape-one">
     <img src="../../../assets/images/shape/15.png" alt="" class="shape-two">
-    <img src="../../../assets/images/shape/16.png" alt="" class="shape-three">
+    <img src="../../../assets/images/shape/16.png" alt="" class="shape-three"> -->
     <div class="container">
       <h2 class="title">Portfolio</h2>
     </div>
@@ -18,50 +18,46 @@
         </div> <!-- /.theme-title-one -->
 
         <ul class="isotop-menu-wrapper">
-          <li class="is-checked" data-filter="*">All Work</li>
-          <li data-filter=".creative">Creative Movement</li>
-          <li data-filter=".ballet">Ballet</li>
-          <li data-filter=".tap">Tap</li>
+          <li class="is-checked" data-filter="*">Kathak Expert</li>
+          <!-- <li data-filter=".creative">Kathak Expert</li> -->
+          <!-- <li data-filter=".tap">Tap</li>
           <li data-filter=".jazz">Jazz</li>
-          <li data-filter=".hiphop">Hip-Hop</li>
+          <li data-filter=".hiphop">Hip-Hop</li> -->
         </ul>
 
         <!-- Changes are made -->
         <div id="isotop-gallery-wrapper" class="row">
+          <div class="isotop-item full-column creative hiphop" style="padding: 0;">
+            <div class="single-item">
+              <img src="../../../assets/images/Nrutyanaad/DSC_8604.jpg" alt="Image">
+              <div class="hover-content">
+                <div>
+                  <h3>Kathak Theatre</h3>
+                  <!-- <p>Dance / Music</p> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
           <div class="row">
-            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet creative">
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
               <div class="single-item">
-                <img src="../../../assets/images/portfolio/1.jpg" alt="Image">
+                <img height="389px;" width="585px;" src="../../../assets/images/DSC_0012.JPG" alt="Image">
                 <div class="hover-content">
                   <div>
-                    <h3>Musical Theatre</h3>
-                    <p>Dance / Music</p>
+                    <h3>Natraj Poojan</h3>
+                    <!-- <p>Kathak</p> -->
                   </div>
                 </div>
               </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-sm-6">
-              <div class="row">
-                <div class="col-xl-12 col-lg-12 col-sm-12 isotop-item tap jazz ballet">
-                  <div class="single-item">
-                    <img src="../../../assets/images/portfolio/2.jpg" alt="Image">
-                    <div class="hover-content">
-                      <div>
-                        <h3>Musical Theatre</h3>
-                        <p>Dance / Music</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class=" col-xl-12 col-lg-12 col-sm-12 isotop-item tap jazz hiphop">
-                  <div class="single-item">
-                    <img src="../../../assets/images/portfolio/3.jpg" alt="Image">
-                    <div class="hover-content">
-                      <div>
-                        <h3>Musical Theatre</h3>
-                        <p>Dance / Music</p>
-                      </div>
-                    </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img height="389px;" src="../../../assets/images/IMG-20180903-WA0013.jpg" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Shirdi Event</h3>
+                    <!-- <p>Kathak</p> -->
                   </div>
                 </div>
               </div>
@@ -69,60 +65,135 @@
           </div>
 
           <div class="row">
-            <div class="col-xl-6 col-lg-6 col-sm-6">
-              <div class="row">
-                <div class="col-xl-12 col-lg-12 col-sm-12 isotop-item tap jazz ballet">
-                  <div class="single-item">
-                    <img src="../../../assets/images/portfolio/2.jpg" alt="Image">
-                    <div class="hover-content">
-                      <div>
-                        <h3>Musical Theatre</h3>
-                        <p>Dance / Music</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class=" col-xl-12 col-lg-12 col-sm-12 isotop-item tap jazz hiphop">
-                  <div class="single-item">
-                    <img src="../../../assets/images/portfolio/3.jpg" alt="Image">
-                    <div class="hover-content">
-                      <div>
-                        <h3>Musical Theatre</h3>
-                        <p>Dance / Music</p>
-                      </div>
-                    </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img src="../../../assets/images/IMG_8436.JPG" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Mauritius Theatre</h3>
+                    <!-- <p>Kathak</p> -->
                   </div>
                 </div>
               </div>
             </div>
-              <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
-                <div class="single-item">
-                  <img src="../../../assets/images/portfolio/6.jpg" alt="Image">
-                  <div class="hover-content">
-                    <div>
-                      <h3>Musical Theatre</h3>
-                      <p>Dance / Music</p>
-                    </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img height="389px;" src="../../../assets/images/20171125_183356.jpg" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Spain Event</h3>
+                    <!-- <p>Kathak</p> -->
                   </div>
                 </div>
               </div>
+            </div>
           </div>
 
           <div class="isotop-item full-column creative hiphop" style="padding: 0;">
             <div class="single-item">
-              <img src="../../../assets/images/portfolio/7.jpg" alt="Image">
+              <img src="../../../assets/images/Krishnamahima sanpada/ER4A8524.JPG" alt="Image">
+            
               <div class="hover-content">
                 <div>
-                  <h3>Musical Theatre</h3>
-                  <p>Dance / Music</p>
+                  <h3>Krishnamahima Event</h3>
+                  <!-- <p>Dance / Music</p> -->
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img height="330px;" src="../../../assets/images/Nrityavilay/RAJ_5921.JPG" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Nrityavilay Event</h3>
+                    <!-- <p>Kathak</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img src="../../../assets/images/DSC_0699.JPG" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Krishnarang Event</h3>
+                    <!-- <p>Kathak</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="isotop-item full-column creative hiphop" style="padding: 0;">
+            <div class="single-item">
+              <img src="../../../assets/images/Nrutyanaad/DSC_9037.jpg" alt="Image">
+              <div class="hover-content">
+                <div>
+                  <h3>Stree Gatha</h3>
+                  <!-- <p>Dance / Music</p> -->
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img src="../../../assets/images/1.jpg" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Bhav Ratna</h3>
+                    <!-- <p>Kathak</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img src="../../../assets/images/2.jpg" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Global Harmony</h3>
+                    <!-- <p>Kathak</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img src="../../../assets/images/3.JPG" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Kalanjali</h3>
+                    <!-- <p>Kathak</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-sm-6 isotop-item ballet jazz tap">
+              <div class="single-item">
+                <img src="../../../assets/images/4.JPG" alt="Image">
+                <div class="hover-content">
+                  <div>
+                    <h3>Global Theatre</h3>
+                    <!-- <p>Kathak</p> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
   </div>
 
+  <app-whatsapp></app-whatsapp>
   <app-scrollToTop></app-scrollToTop>
 </div>
