--- a/src/app/components/shared/whatsapp/whatsapp.component.html
+++ b/src/app/components/shared/whatsapp/whatsapp.component.html
@@ -1,5 +1,5 @@
 <a href="https://api.whatsapp.com/send?
-phone=7303009505
+phone=+917303009505
 &text=Hello" class="float" target="_blank">
 <img class="whatsapp-icon" src='../../../../assets/images/whatsapp.png' alt="">
 </a>
