--- a/src/app/pages/our-studio/our-studio.component.html
+++ b/src/app/pages/our-studio/our-studio.component.html
@@ -77,7 +77,7 @@
                 <div class="col-sm-6">
                   <div class="single-counter-box">
                         <h2 class="number"><span class="timer" data-from="0" data-to="1300" data-speed="1200" data-refresh-interval="5">0</span>+</h2>
-                        <p>Verified Happy Client</p>
+                        <p>Verified Happy Students</p>
                       </div> 
                 </div>
                 <div class="col-sm-6">
@@ -153,7 +153,7 @@
     <div class="client-section">
       <div class="theme-title-one text-center">
         <h6 class="upper-title">Testimonials</h6>
-        <h2 class="main-title">What Our Customers <br>Are Saying!!</h2>
+        <h2 class="main-title">What Our Students <br>Are Saying!!</h2>
       </div> 
       <div class="wrapper">
         <div class="client-slider">
